software-center (1.1.13) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * data/featured.menu.in:
    - add scribus, blender
    - fix missing i18n
  * data/software-center.menu.in:
    - add a bunch of missing _
  * softwarecenter/backend/aptd.py:
    - fix cache reload functionality (LP: #514861)

  [ Gary Lasker ]
  * softwarecenter/view/viewswitcher.py:
    - fix ValueError in on_transactions_changed (LP: #523420)
    - fix AttributeError in do_render (LP: #523341)
  * softwarecenter/view/installedpane.py:
    - fix AttributeError in refresh_apps() (LP: #520097)
  * softwarecenter/view/widgets/pathbar2.py:
    - fix typo in PathBarThemeHumanClearlooks class,
      gave an AttributeError in __expose_cb() (LP: #523452) 
  * softwarecenter/app.py,
    softwarecenter/backend/aptd.py:
    - update to use new backend reload API (LP: #496058) 

 -- Gary Lasker <gary.lasker@canonical.com>  Mon, 22 Feb 2010 21:00:54 -0500

software-center (1.1.12) lucid; urgency=low

  [ Michael Vogt ]
  * merged lp:~mmcg069/software-center/spinner  (many thanks)
  * merged lp:~mmcg069/software-center/fixes-and-tweaks  (many thanks)
  
  [ Gary Lasker ]
  * implement standalone presentation of individual software
    repositories
  
  [ Michael Vogt ]
  * README:
    - document menu.d/ directory
  * softwarecenter/view/catview.py:
    - add SCPkgname xml filter
  * apt-xapian-index-plugin/software-center.py:
    - add custom apt-xapian-index plugins for indexing 
      "XB-Softwarecenter-Appname" in debian/control
  * apt-xapian-index-plugin/origin.py:
    - add custom apt-xapian-index plugins for indexing the origins
  * softwarecenter/distro/Ubuntu.py:
    - add abstraction for distro_channel_{name,description}
  * softwarecenter/distro/__init__.py:
    - make get_distro() return a singleton
  * softwarecenter/view/channelpane.py:
    - for the main distro channel, show only apps, not all packages
  * data/featured.menu.in:
    - add a "Featured" category
